@@ -137,6 +137,7 @@ public:
 	
 	typedef MatrixRow<RTYPE> Row ;
 	typedef MatrixColumn<RTYPE> Column ;
+	typedef SubMatrix<RTYPE> Sub ;
 
 	inline Row operator()( int i, internal::NamedPlaceHolder ){
 	    return Row( *this, i ) ;
@@ -146,16 +147,16 @@ public:
 	    return Column( *this, i ) ;
 	}
 	
-	inline SubMatrix<RTYPE> operator()( const Range& row_range, const Range& col_range){
-	    return SubMatrix<RTYPE>( const_cast<Matrix&>(*this), row_range, col_range ) ;
+	inline Sub operator()( const Range& row_range, const Range& col_range){
+	    return Sub( const_cast<Matrix&>(*this), row_range, col_range ) ;
 	}
 	
-	inline SubMatrix<RTYPE> operator()( internal::NamedPlaceHolder, const Range& col_range){
-	    return SubMatrix<RTYPE>( const_cast<Matrix&>(*this), Range(0,nrow()-1) , col_range ) ;
+	inline Sub operator()( internal::NamedPlaceHolder, const Range& col_range){
+	    return Sub( const_cast<Matrix&>(*this), Range(0,nrow()-1) , col_range ) ;
 	}
 	
-	inline SubMatrix<RTYPE> operator()( const Range& row_range, internal::NamedPlaceHolder ){
-	    return SubMatrix<RTYPE>( const_cast<Matrix&>(*this), row_range, Range(0,ncol()-1) ) ;
+	inline Sub operator()( const Range& row_range, internal::NamedPlaceHolder ){
+	    return Sub( const_cast<Matrix&>(*this), row_range, Range(0,ncol()-1) ) ;
 	}
 	
 	
